--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 	<!--<link href="css/estilos.css" rel="stylesheet" />-->
 </head>
 <body>
+    <h1>titulo de la pagina</h1>
 
 
     
 
     
-
-
-
 
 
 
