--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    script src="js/js.js"></script>
+    <script src="js/js.js"></script>
 	<link href="css/estilos.css" rel="stylesheet" />
 </head>
 <body>
@@ -18,6 +18,8 @@
   <p>Segundo parrafo</p>  
 
 <aside>EL LATERAL</aside>
+
+<p>parrafo en master</p>
 
     
 </body>
