--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <p>parrafo en master</p>
 
-<button onclick="saludo()">oidtihoe</button>
+<button onclick="saludo()">DALE AQUI!</button>
 
     
 </body>
